--- a/Parkscore_markdown.Rmd
+++ b/Parkscore_markdown.Rmd
@@ -1,5 +1,10 @@
 ---
 title: '**Exploratory Data Analysis with R - the Parkscore Index**'
+knit: (function(input_file, encoding) {
+  out_dir <- 'docs';
+  rmarkdown::render(input_file,
+ encoding=encoding,
+ output_file=file.path(dirname(input_file), out_dir, 'index.html'))})
 author: "Adrián Riveros"
 date: '`r Sys.Date()`'
 output:
